# email-calender-env

./: .gitignore  AGENT.md  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  email_calendar_env.py  grader.py  models.py
env/tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
server/: app.py
tests/: test_env.py  test_grader.py
