[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-calendar-env"
version = "0.1.0"
description = "Email + Calendar RL Environment for OpenEnv"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv",
    "httpx",
    "python-dateutil",
    "faker"
]

[project.scripts]
server = "server.app:main"

[project.entry-points."openenv.environments"]
email-calendar-env = "env.email_calendar_env:EmailCalendarEnv"

[tool.setuptools]
packages = ["env", "server"]
